--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <body>
         <!-- thẻ main bao bọc cả trang web -->
         <main>
-            <!-- HEADER -->
-            <header class="header">
+            <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- LOGO -->
@@ -38,7 +37,12 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
+                </div>
+            </header>
 
+            <!-- HERO -->
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -60,7 +64,7 @@
                         class="hero-img"
                     />
                 </div>
-            </header>
+            </div>
 
             <!-- CLIENTS -->
             <div class="clients">
