--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     </head>
     <body>
         <!-- thẻ main bao bọc cả trang web -->
-        <main>
+        <main id="home">
             <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- LOGO -->
-                        <a href="#!"
+                        <a href="#home"
                             ><img src="./assets/img/logo.svg" alt="Besnik"
                         /></a>
                         <!-- NAVIGATION -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#resources">Resources</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                         <!-- ACTION -->
                         <div class="actions">
@@ -122,7 +122,7 @@
             </div>
 
             <!-- Guides -->
-            <div class="guides">
+            <div id="services" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -191,7 +191,7 @@
             </div>
 
             <!-- FEATURED -->
-            <div class="featured">
+            <div id="features" class="featured">
                 <div class="content">
                     <h3 class="sub-title">Featured Properties</h3>
                     <div class="row">
@@ -339,7 +339,7 @@
             </div>
 
             <!-- STATS -->
-            <div class="stats">
+            <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -505,7 +505,7 @@
             </div>
 
             <!-- SUBCRIPTION -->
-            <div class="subcription">
+            <div id="contact" class="subcription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
